--- a/.gitignore
+++ b/.gitignore
@@ -125,6 +125,10 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+#Temporary folders
+tmp/
+temp/
+
 # yarn v2
 .yarn/cache
 .yarn/unplugged
@@ -141,4 +145,4 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
-# End of https://www.toptal.com/developers/gitignore/api/node
+# End of https://www.toptal.com/developers/gitignore/api/node"D:\nodejs\PCAT\temp" 
